tests/should-fail/no-cmd.fk
-- #desc Command not contained in interfaces within port adjustment
-- #return command writeOut.0 not found in adjustments of port <Send X>Int (line 7 , column 5)
interface Send X = send : X -> Int

interface Write X = writeOut : Unit -> X

f : <Send X>Int -> Int
f   <writeOut x -> k> = 0

main : {Int}
main! = 0
